try to fix tabs on IE8

--- a/themes/birdchess/css/components/tabs.less
+++ b/themes/birdchess/css/components/tabs.less
@@ -35,6 +35,9 @@
 			
 		}
 		
+.lt-ie9 .nav-tabs > li > a img { max-width: none; }
+
+
 		.nav-tabs > li > a:hover {
 		
 			border-color: transparent transparent @tabBorderColor;
